Implement dashboard missions for fake server

--- a/web/index.html
+++ b/web/index.html
@@ -150,6 +150,7 @@
   <script src="/src/bridge/remote/firestore/classmodels/game.js"></script>
   <script src="/src/bridge/remote/firestore/classmodels/group.js"></script>
   <script src="/src/bridge/remote/firestore/classmodels/message.js"></script>
+  <script src="/src/bridge/remote/firestore/classmodels/mission.js"></script>
   <script src="/src/bridge/remote/firestore/classmodels/player.js"></script>
   <script src="/src/bridge/remote/firestore/classmodels/reward.js"></script>
   <script src="/src/bridge/remote/firestore/classmodels/user.js"></script>
@@ -158,6 +159,7 @@
   <script src="/src/bridge/remote/firestore/constants/chatpath.js"></script>
   <script src="/src/bridge/remote/firestore/constants/gamepath.js"></script>
   <script src="/src/bridge/remote/firestore/constants/grouppath.js"></script>
+  <script src="/src/bridge/remote/firestore/constants/missionpath.js"></script>
   <script src="/src/bridge/remote/firestore/constants/playerpath.js"></script>
   <script src="/src/bridge/remote/firestore/constants/rewardpath.js"></script>
   <script src="/src/bridge/remote/firestore/constants/userpath.js"></script>
