Implement markdown view for web

--- a/web/index.html
+++ b/web/index.html
@@ -262,9 +262,10 @@
   <link rel="import" href="/src/rules/rules-collapsible.html">
   <link rel="import" href="/src/rules/rules-section.html">
   <link rel="import" href="/src/rules/rules.html">
+  <link rel="import" href="/src/ui/alert.html">
   <link rel="import" href="/src/ui/card.html">
   <link rel="import" href="/src/ui/dashboard.html">
-  <link rel="import" href="/src/ui/alert.html">
+  <link rel="import" href="/src/ui/markdown-view.html">
   <link rel="import" href="/src/ui/loading.html">
   <link rel="import" href="/src/ui/table/auto-table.html">
   <link rel="import" href="/src/ui/table/echo.html">
