--- a/web/src/missions/mission.html
+++ b/web/src/missions/mission.html
@@ -92,6 +92,7 @@
         in-group="{{inGroup}}">
     </ghvz-rsvp-->
     </div>
-    <div id="mission" name$="mission-text-[[mission.name]]">[[mission.details]]</div>
+    <ghvz-markdown-view id="mission" name$="mission-text-[[mission.name]]" text=[[mission.details]]>
+    </ghvz-markdown-view>
   </template>
 </dom-module>
