Fix dialog bug and implement reward creation in fake server
Fixes issue where dialog shadow was covering dialog (removed "modal").

--- a/web/src/form/form.html
+++ b/web/src/form/form.html
@@ -161,7 +161,7 @@
       }
     </style>
 
-    <paper-dialog id="dialog" modal on-iron-overlay-opened="opened_" on-iron-overlay-closed="closed_">
+    <paper-dialog id="dialog" on-iron-overlay-opened="opened_" on-iron-overlay-closed="closed_">
       <template is="dom-if" if="[[title]]">
         <div id="title">
           [[title]]
