--- a/web/src/chat/chat-room.html
+++ b/web/src/chat/chat-room.html
@@ -249,14 +249,14 @@
 
         openPlayerProfile_(e) {
           return;  // should we enable this?
-          var playerId = e.model.item.playerId;
+          /* var playerId = e.model.item.playerId;
           if (playerId) {
             this.fire('ghvz-set-path', {
               inGame: true,
               path: ['profile', playerId],
               replace: false,
             });
-          }
+          }*/
         },
 
         /**
