Fix chat input field showing up in web

--- a/web/src/chat/chat-room-settings.html
+++ b/web/src/chat/chat-room-settings.html
@@ -43,7 +43,7 @@
 
         observers: [
           'updateDoneEnabled_(newName)',
-          'onChatRoomsUpdated_(game, player.private.chatRoomMemberships.*)',
+          'onChatRoomsUpdated_(game, player.chatRoomMemberships.*)',
         ],
 
         onChatRoomsUpdated_() {
