--- a/web/src/chat/chat-info-actions.html
+++ b/web/src/chat/chat-info-actions.html
@@ -115,7 +115,7 @@
         },
 
         kickFromChat_: function(playerId, game) {
-          this.kickPlayer = this.game.playersById[playerId];
+          this.kickPlayer = this.game.players[playerId];
           this.$.kickForm.open();
         },
 
