--- a/web/index.html
+++ b/web/index.html
@@ -31,7 +31,7 @@
   <script>
     window.Polymer = {
       lazyRegister: true,
-      useNativeCSSProperties: true
+      useNativeCSSProperties: true,
     };
   </script>
 
