--- a/web/src/chat/chat-room-input.html
+++ b/web/src/chat/chat-room-input.html
@@ -143,7 +143,7 @@
 
           if (notificationPlayerIds.length) {
             for (let receiverPlayerId of notificationPlayerIds) {
-              let receiverPlayer = this.game.playersById[receiverPlayerId];
+              let receiverPlayer = this.game.players[receiverPlayerId];
               let messageForNotification = this.currentPlayer.name + ": " + strippedMessage;
               this.bridge.sendNotification({
                 gameId: this.game.id,
