--- a/web/src/lookup/player-dialog.html
+++ b/web/src/lookup/player-dialog.html
@@ -78,6 +78,9 @@
           this.donePromiseResolve(null);
         },
 
+        toArray_(playersObject) {
+          return Utils.getValuesAsArray(playersObject);
+        }
       });
     });
   </script>
@@ -137,7 +140,8 @@
         <paper-item tabindex="0" class="player" name="null-player" on-tap="onNullItemClicked_">
           (none)
         </paper-item>
-        <template is="dom-repeat" id="repeater" items="[[game.players]]" sort="sort_" filter="filter_" as="player">
+        <template is="dom-repeat" id="repeater" items="[[toArray_(game.players)]]" sort="sort_" filter="filter_"
+          as="player">
           <paper-item tabindex="0" class="player"
             name$="player-name-[[computePlayerText_(player, player.id, player.name)]]" on-tap="onItemClicked_">
             [[computePlayerText_(player, player.id, player.name)]]
