--- a/web/src/ui/card.html
+++ b/web/src/ui/card.html
@@ -147,6 +147,16 @@
       order: 2;
     }
 
+    paper-icon-button::shadow #icon {
+      /* Style for paper-icon-buttons that are in this class directly. */
+      display: flex;
+    }
+
+    #buttons ::slotted(paper-icon-button #icon) {
+      /* Style for paper-icon-buttons that are added to the dom dynamically. */
+      display: flex;
+    }
+
     .header>.text {
       font-size: 13pt;
       font-weight: bold;
@@ -199,25 +209,20 @@
         <div id="header" class="text" pad-left$="[[!withBack]]">
           <div id="headerText"></div>
           <div id="headerContent">
-            <content select=".header">
+            <slot name=".header"></slot>
           </div>
           <div id="headerElement"></div>
         </div>
-        <!-- <paper-icon-button class="button" icon="icons:chevron-left"></paper-icon-button>
-      <paper-icon-button class="button" icon="icons:chevron-right"></paper-icon-button> -->
-        <!-- <paper-icon-button class="header-button" icon="icons:refresh">
-      </paper-icon-button> -->
+        <!-- Some alternative paper-icon-button icons: 
+          icons:chevron-left, icons:chevron-right, icons:refresh, icons:more-vert -->
         <div id="buttons">
-          <content select=".header-button">
-            <paper-icon-button hidden$="[[!fullscreenPage]]" class="button" icon="icons:fullscreen"
-              on-tap="openFullscreen_"></paper-icon-button>
+          <slot name=".header-button"></slot>
+          <paper-icon-button hidden$="[[!fullscreenPage]]" class="button" icon="icons:fullscreen"
+            on-tap="openFullscreen_"></paper-icon-button>
         </div>
-
-        <!-- <paper-icon-button class="button" icon="icons:more-vert">
-      </paper-icon-button> -->
       </div>
       <div id="contents" style="position: relative;">
-        <content />
+        <slot></slot>
       </div>
     </paper-material>
 
