Fix chat drawer and spacing in full page view. Also fix infect bug
There was a bug in fake server where members could be duplicate in the member list. Doesn't happen in firestore because we do an array union, but in fake server we have to actually check that the user isn't already in the array.

Fix for drawer was that it can't be nested in a div. That was rendering the drawer out of bounds and was a pain to debug.

--- a/web/src/chat/chat-info-drawer.html
+++ b/web/src/chat/chat-info-drawer.html
@@ -179,9 +179,6 @@
     }
   </style>
   <template>
-    <array-selector id="chatRoomSelector" items="[[game.chatRooms]]" selected="{{chatRoom}}"></array-selector>
-    <array-selector id="groupsSelector" items="[[game.groups]]" selected="{{group}}"></array-selector>
-
     <div name$="chat-drawer-[[chatRoom.name]]" on-tap="captureTap_">
       <div class="drawer-header">
         [[chatRoom.name]]
@@ -194,10 +191,10 @@
               Add player
             </a>
           </template>
-          <!-- <a href="javascript:void(0)" data-action="notifications" class="drawer-item">
+          <a href="javascript:void(0)" data-action="notifications" class="drawer-item">
             <iron-icon icon="social:notifications"></iron-icon>
             Notifications
-          </a> -->
+          </a>
           <template is="dom-if" if="[[canRemoveSelf]]">
             <a name="chat-drawer-leave" href="javascript:void(0)" data-action="leave" class="drawer-item">
               <iron-icon icon="communication:call-made"></iron-icon>
